# chiron_agent

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.tr.md  SECURITY.md  otonom_uzmanlasan_ai_agent_skills_mcp_mimarisi.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: capability-manager.md  evaluator.md  security-gatekeeper.md  supervisor.md
.claude/skills/backtest-integrity/: SKILL.md
.claude/skills/capability-gap-analysis/: SKILL.md
.claude/skills/experience-memory/: SKILL.md
.claude/skills/library-discovery/: SKILL.md
.claude/skills/mcp-security-review/: SKILL.md
.claude/skills/minimalist-engineering/: SKILL.md
.claude/skills/secure-capability-acquisition/: SKILL.md
.claude/skills/skill-creator-safe/: SKILL.md
.claude/skills/software-lifecycle/: SKILL.md
.claude/skills/visual-qa/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  skill_proposal.yml
.github/workflows/: ci.yml
ajan_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
contrib/skills/: README.md
contrib/skills/software-lifecycle/: SKILL.md
core/: __init__.py  __main__.py  audit.py  autoacquire.py  backlog.py  confidence.py  evals.py  github_search.py  guard_hook.py  learning.py  lifecycle.py  paths.py  policy.py  registry.py  sandbox.py  scanner.py
docs/: IDE.md
evals/: backtest-integrity.yaml
policies/: immutable-core.yaml  permissions.yaml  trading.yaml
scripts/: install_global.py  setup_ajan.py
tests/: conftest.py  test_audit.py  test_audit_tamper.py  test_autoacquire.py  test_backlog.py  test_github_search.py  test_guard_hook.py  test_learning.py  test_pipeline.py  test_policy.py  test_registry_confidence.py  test_sandbox.py  test_scanner.py  test_scanner_adversarial.py  test_setup_patch.py
tests/fixtures/benign-skill/: SKILL.md
tests/fixtures/malicious-skill/: SKILL.md
