# Chiron platformunu pip ile kurulabilir yapar: `pip install -e .`
# Sonucta 'chiron' (ve eski adiyla 'ajan') komutu ve `python -m core` HER
# dizinden calisir; boylece
# Cursor/Windsurf/VS Code'da (Claude Code eklentisiyle) global kullanilabilir.
#
# Onemli: kurulum editable (-e) oldugundan platformun evi BU repo'dur; policies,
# registry, audit merkezi olarak burada kalir (tek yetenek kutuphanesi).
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chiron-agent"
version = "1.0.0"
description = "Chiron - autonomous, self-specializing AI agent platform: safe capability acquisition + token-efficient learning"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
chiron = "core.__main__:main"
ajan = "core.__main__:main"

[tool.setuptools]
packages = ["core"]
